if WANT_FSMBOOK_TESTS
TESTS=test.sh
endif

EXTRA_DIST=test.sh \
expected-results/BetterColaMachine.prolog \
expected-results/EnglishNumerals.prolog \
expected-results/EsperantoNouns.prolog \
expected-results/NumbersToNumerals.prolog \
expected-results/BrazilianPortuguese1.prolog \
expected-results/EsperantoAdjectives.prolog \
expected-results/FinnishOTProsody.prolog \
expected-results/PlusOrMinus.prolog \
expected-results/BrazilianPortuguese2.prolog \
expected-results/EsperantoNounsAdjectivesAndVerbs.prolog \
expected-results/Lingala.prolog \
expected-results/YaleShooting.prolog \
expected-results/DateParser.prolog \
expected-results/EsperantoNounsAndAdjectives.prolog \
expected-results/MonishAnalysis.prolog \
expected-results/EinsteinsPuzzle.prolog \
expected-results/EsperantoNounsAndAdjectivesWithTags.prolog \
expected-results/MonishGuesserAnalyzer.prolog \
hfst-scripts/BetterColaMachine.hfst.script \
hfst-scripts/BrazilianPortuguese1.hfst.script \
hfst-scripts/BrazilianPortuguese2.hfst.script \
hfst-scripts/DateParser.hfst.script \
hfst-scripts/EinsteinsPuzzle.hfst.script \
hfst-scripts/EnglishNumerals.hfst.script \
hfst-scripts/EsperantoAdjectives.hfst.script \
hfst-scripts/EsperantoNounsAdjectivesAndVerbs.hfst.script \
hfst-scripts/EsperantoNounsAndAdjectives.hfst.script \
hfst-scripts/EsperantoNounsAndAdjectivesWithTags.hfst.script \
hfst-scripts/EsperantoNouns.hfst.script \
hfst-scripts/FinnishNumerals.hfst.script \
hfst-scripts/FinnishOTProsody.hfst.script \
hfst-scripts/FinnishProsody.hfst.script \
hfst-scripts/Lingala.hfst.script \
hfst-scripts/MonishAnalysis.hfst.script \
hfst-scripts/MonishGuesserAnalyzer.hfst.script \
hfst-scripts/NumbersToNumerals.hfst.script \
hfst-scripts/Palindromes.hfst.script \
hfst-scripts/PlusOrMinus.hfst.script \
hfst-scripts/YaleShooting.hfst.script \
lexc-files/EsperantoAdjectives.lexc \
lexc-files/EsperantoNounsAdjectivesAndVerbs.lexc \
lexc-files/EsperantoNounsAndAdjectives.lexc \
lexc-files/EsperantoNounsAndAdjectivesWithTags.lexc \
lexc-files/EsperantoNouns.lexc \
lexicon/english_lexicon.txt \
xfst-scripts/BetterColaMachine.xfst.script \
xfst-scripts/BrazilianPortuguese1.xfst.script \
xfst-scripts/BrazilianPortuguese2.xfst.script \
xfst-scripts/DateParser.xfst.script \
xfst-scripts/EinsteinsPuzzle.xfst.script \
xfst-scripts/EnglishNumerals.xfst.script \
xfst-scripts/EsperantoAdjectives.xfst.script \
xfst-scripts/EsperantoNounsAdjectivesAndVerbs.xfst.script \
xfst-scripts/EsperantoNounsAndAdjectivesWithTags.xfst.script \
xfst-scripts/EsperantoNounsAndAdjectives.xfst.script \
xfst-scripts/EsperantoNouns.xfst.script \
xfst-scripts/FinnishOTProsody.xfst.script \
xfst-scripts/Lingala.xfst.script \
xfst-scripts/MonishAnalysis.xfst.script \
xfst-scripts/MonishGuesserAnalyzer.xfst.script \
xfst-scripts/NumbersToNumerals.xfst.script \
xfst-scripts/PlusOrMinus.xfst.script \
xfst-scripts/YaleShooting.xfst.script
